<resources>
    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="font_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="font_size_values">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string-array name="language_entries">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string name="title_settings">Settings</string>
    <string name="theme_label">Theme</string>
    <string name="theme_summary">Change application theme</string>
    <string name="font_label">Font Size</string>
    <string name="font_summary">Change font size</string>
    <string name="lang_label">Language</string>
    <string name="lang_summary">Change application language</string>
    <string name="data_label">Clear Data</string>
    <string name="data_summary">Clear all application data</string>
    <string name="clear_data_title">Clear all data?</string>
    <string name="clear_data_message">This will clear all data and reset all settings to default. Are you sure?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
</resources>